# refactor-switch-giridharmeera

./: CMakeLists.txt  CreditCardProcessor.cpp  PaymentProcessorFactory.cpp
.github/workflows/: ci.yml  jscpd.yml  main-workflow.yml
Payment_app/: main.cpp
Payment_processor/: CreditCardProcessor.cpp  GooglePayProcessor.cpp  PayPalProcessor.cpp
app/: main.cpp
include/: CreditCardProcessor.h  GooglePayProcessor.h  IPaymentProcessor.h  PayPalProcessor.h  PaymentProcessorFactory.h
src/: GooglePayProcessor.cpp  PayPalProcessor.cpp
test/: PaymentProcessorTest.cpp
